Fixed rendering distortion issue and enhanced UI

--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -1,3 +1,7 @@
 a,label {
     font-size: 18px;
 }
+form {
+    width: 200px;
+    margin: 0 auto;
+}
